[package]
name = "qwerty-mlir-sys"
version = "0.5.0"
authors = ["McCoy R. Becker", "Yota Toyama", "Edgar Luque", "Austin J. Adams"]
keywords = ["mlir", "llvm"]
categories = ["external-ffi-bindings"]
edition = "2024"
description = "Rust bindings to the Qwerty MLIR C API."
repository = "https://github.com/mlir-rs/mlir-sys"
readme = "README.md"
links = "MLIR"
license-file = "LICENSE"

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
